err/respeaker.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/respeaker'...
Compiling './lib/python3.5/site-packages/respeaker/fft.py'...
***   File "./lib/python3.5/site-packages/respeaker/fft.py", line 86
    print fft.dft(data)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/respeaker/pixel_ring.py'...
***   File "./lib/python3.5/site-packages/respeaker/pixel_ring.py", line 76
    print packet
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/respeaker/pocketsphinx-data'...
Listing './lib/python3.5/site-packages/respeaker/pocketsphinx-data/hmm'...
Compiling './lib/python3.5/site-packages/respeaker/spectrum_analyzer.py'...
***   File "./lib/python3.5/site-packages/respeaker/spectrum_analyzer.py", line 75
    print [int(f) for f in analyzer.frequencies]
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/respeaker/usb_hid'...
Compiling './lib/python3.5/site-packages/respeaker/usb_hid/pyusb_backend.py'...
***   File "./lib/python3.5/site-packages/respeaker/usb_hid/pyusb_backend.py", line 114
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/respeaker-0.5.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
